# record-validator

./: .gitignore  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: unit-tests.yaml
record_validator/: adapters.py  base_fields.py  constants.py  field_models.py  marc_errors.py  marc_models.py  order_item_models.py  parsers.py  test_adapters.py  translate.py  utils.py  validators.py
tests/: conftest.py  test_adapters.py  test_base_fields.py  test_constants.py  test_field_models.py  test_marc_errors.py  test_marc_models.py  test_parsers.py  test_translate.py  test_utils.py  test_validators.py
