[project]
name = "record-validator"
version = "0.1.1"
description = "MARC record validator for shelf-ready materials"
authors = [{name = "Charlotte Kostelic", email = "charlottekostelic@bookops.org"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.8.2)",
    "pymarc (>=5.2.2)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = '--cov=record_validator/'

[tool.coverage.run]
relative_files = true
source = ["."]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false